ddp-workspace/projects/ddp-rgp/src/styles.scss
html,
body {
    margin: 0;
    padding: 0;
    height: 100%;
    font-size: 15px !important;
    padding-right: 0 !important;
}

body {
    font-family: 'Roboto', sans-serif !important;
    overflow-y: scroll;
}

@media only screen and (min-width: 2500px) {

    html,
    body {
        font-size: 30px !important;
    }
}

@media (min-width: 1921px) and (max-width: 2499px) {

    html,
    body {
        font-size: 18px !important;
    }
}

@media (min-width: 1025px) and (max-width: 1920px) {

    html,
    body {
        font-size: 16px !important;
    }
}

@media only screen and (max-width: 1026px) {

    html,
    body {
        font-size: 15px !important;
    }
}

.row:after {
    visibility: hidden;
    display: block;
    content: "";
    clear: both;
    height: 0;
}

@media only screen and (max-width: 767px) {
    .col-xs-8.col-sm-offset-2 {
        margin-left: 16.666%;
    }
}

a,
button {
    text-decoration: none !important;
    outline: 0 !important;
}

a:hover,
a:active,
a:focus {
    outline: 0;
}

@media only screen and (max-width: 767px) {

    ul,
    ol {
        padding-left: 20px;
    }
}

.Wrapper,
.Wrapper--home,
.Wrapper--homeBottom {
    position: relative;
    min-height: 100%;
    background-color: #ffffff;
    z-index: 1;
}

.section:nth-of-type(3){
    position: relative;
    min-height: 100%;
    background-color: #ffffff;
    z-index: 1;
    padding-bottom: 190px;
    margin: 0 100px;

    .content_tight {
        padding-top: 50px;
    }
}

@media only screen and (min-width: 1200px) {
    .section:nth-of-type(3) .content_tight {
        margin-left: 8.33333333%;
        width: 75%;
        float:left
    }
}

@media (min-width: 992px) and (max-width: 1199px) {
    .section:nth-of-type(3) .content_tight {
        float: left;
        margin-left: 8.33333333%;
        width: 83.33333333%;
    }
}

@media (min-width: 768px) and (max-width: 991px)  {
    .section:nth-of-type(3) .content_tight {
        width: 100%;
        padding: 50px 25px 75px 25px;
    }
}

.Wrapper,
.Wrapper--homeBottom {
    padding-bottom: 190px;
    /* Height of the footer*/
}

.Wrapper {
    margin: 0 100px;
}

.Wrapper--home {
    margin: 100px 50px 0 50px;
    padding-bottom: 75px;
}

.Wrapper--homeBottom {
    margin: 0;
}

@media only screen and (min-width: 2500px) {

    .Wrapper,
    .Wrapper--homeBottom,
    .section:nth-of-type(3) {
        padding-bottom: 391px;
        /* Height of the footer*/
    }

    .Wrapper,
    .section:nth-of-type(3) {
        margin: 0 150px;
    }

    .Wrapper--home {
        margin: 197px 150px 0 150px;
    }
}

@media (min-width: 1921px) and (max-width: 2499px) {
    .Wrapper--home {
        margin-top: 100px !important;
    }
}

@media (min-width: 1201px) and (max-width: 1920px) {
    .Wrapper--home {
        margin-top: 90px !important;
    }
}

@media (min-width: 1025px) and (max-width: 1200px) {
    .Wrapper,
    .section:nth-of-type(3) {
        margin: 0 50px;
    }

    .Wrapper--home {
        margin: 80px 50px 0 50px !important;
    }
}

@media (min-width: 768px) and (max-width: 1024px) {

    .Wrapper,
    .Wrapper--homeBottom,
    .section:nth-of-type(3) {
        padding-bottom: 235px !important;
    }

    .Wrapper,
    .section:nth-of-type(3) {
        margin: 0 35px;
    }

    .Wrapper--home {
        margin: 80px 35px 0 35px !important;
        padding-bottom: 50px;
    }
}

@media (min-width: 451px) and (max-width: 767px) {

    .Wrapper,
    .Wrapper--homeBottom,
    .section:nth-of-type(3) {
        padding-bottom: 440px !important;
    }

    .Wrapper,
    .section:nth-of-type(3) {
        margin: 0 35px;
    }

    .Wrapper--home {
        margin: 80px 35px 0 35px !important;
    }
}

@media only screen and (max-width: 450px) {

    .Wrapper,
    .Wrapper--homeBottom,
    .section:nth-of-type(3) {
        padding-bottom: 500px !important;
    }

    .Wrapper,
    .section:nth-of-type(3) {
        margin: 0;
    }

    .Wrapper--home {
        margin: 80px 0 0 0 !important;
    }
}

.Container {
    margin-top: 50px;
    padding-bottom: 75px;
    margin-bottom: 75px;
}

@media only screen and (min-width: 2500px) {
    .Container {
        margin-top: 100px;
    }
}

@media (min-width: 768px) and (max-width: 990px) {
    .Container {
        padding: 0 25px;
    }
}

@media only screen and (max-width: 767px) {
    .Container {
        padding: 0 15px;
    }
}

h2.Title {
    font-size: 2rem;
    line-height: 2.6rem;
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
    margin-top: 50px;
    margin-bottom: 15px;
}

.Title-small {
    font-size: 1.2rem;
    font-style: italic;
    font-weight: 300;
    color: #717174;
    padding: 0;
}

h3.Heading {
    font-size: 1.5rem;
    line-height: 2rem;
    font-family: 'Roboto', sans-serif;
    font-weight: 600;
    padding-top: 5px;
}

h3.Subtitle {
    font-size: 1.1rem;
    line-height: 1.6rem;
    font-family: 'Roboto', sans-serif;
    font-weight: 500;
    padding-top: 5px;
}

h4.Heading {
    font-size: 1.2rem;
    line-height: 1.7rem;
    font-family: 'Roboto', sans-serif;
    font-weight: 500;
    padding-top: 20px;
}

h4.Subtitle {
    font-size: 1rem;
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    padding-top: 20px;
    color: #717174;
}

p.Subheading {
    font-size: 1rem;
    font-weight: 500 !important;
    margin-bottom: 0;
}

p.Paragraph {
    font-size: 1rem;
    line-height: 1.5rem;
    font-weight: 300;
    padding-bottom: 10px;
}

.Italic {
    font-weight: 300 !important;
    font-style: italic;
}

.Normal {
    font-weight: 400 !important;
}

.Accent {
    font-weight: 500 !important;
}
/* ... */

